Architecture redesign to to support other types of connections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bluetooth PC Remote</string>
+    <string name="connect_btn_text">Connect via Bluetooth</string>
+    <string name="not_connected">Not connected</string>
 </resources>
