--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="barcode_success">Barcode read successfully</string>
     <string name="barcode_failure">No barcode captured</string>
     <string name="barcode_error">"Error reading barcode: %1$s"</string>
-    <string name="btn_scanQRCode">Scan QR Code</string>
+    <string name="btn_scanQRCode">Scan computer values</string>
     <string name="profile_deleted">Profile deleted!</string>
     <string name="confirm_delete_profile">Delete profile?</string>
     <string name="delete">Delete</string>
@@ -45,4 +45,5 @@
     <string name="connection_2nd_priority">Connection 2nd priority:</string>
     <string name="connection_1st_priority">Connection 1st priority:</string>
     <string name="connect">connect</string>
+    <string name="saved">Saved</string>
 </resources>
