--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -56,4 +56,6 @@
     <string name="volume_up">volume +</string>
     <string name="volume_down">volume -</string>
     <string name="add_new_profile">add new profile</string>
+    <string name="camera_not_available">Camera not available</string>
+    <string name="please_scan_the_qr_code_shown_in_the_windows_application">Please scan the QR code shown in the Windows application</string>
 </resources>
